Changed the overflow value of chat logs in chat windows in order to fix the scroll behaivor.

--- a/public/style.css
+++ b/public/style.css
@@ -101,7 +101,7 @@ div#input {
 }
 
 div#chatlog {
-    overflow: scroll;
+    overflow: auto;
     height: 100%;
     padding: 5px;
     box-sizing: border-box;
